# LKS32MC07x_CMake_Template

./: CMakeLists.txt  README.md  index_lks32mc07x.json  ldscript.ld  startup_lks32mc07x.s  toolchain-arm-none-eabi.cmake
Pack/: Linko.LKS07x.pdsc
System/Device/Include/: LKS32MC07x.h  absacc.h
System/Drivers/: README.md  libfunevision_historyV2.4.txt
System/Drivers/Include/: lks32MC07x_flash.h  lks32mc07x_adc.h  lks32mc07x_can.h  lks32mc07x_clu.h  lks32mc07x_cmp.h  lks32mc07x_crc.h  lks32mc07x_dac.h  lks32mc07x_dma.h  lks32mc07x_dsp.h  lks32mc07x_exti.h  lks32mc07x_gpio.h  lks32mc07x_hall.h  lks32mc07x_i2c.h  lks32mc07x_lib.h  lks32mc07x_mcpwm.h  lks32mc07x_nvr.h  lks32mc07x_opa.h  lks32mc07x_qep.h  lks32mc07x_sif.h  lks32mc07x_spi.h  lks32mc07x_sys.h  lks32mc07x_tim.h  lks32mc07x_tmp.h  lks32mc07x_uart.h  lks32mc07x_wake.h  system_lks32mc07x.h
System/Drivers/Source/: lks32MC07x_flash.c  lks32mc07x_adc.c  lks32mc07x_can.c  lks32mc07x_clu.c  lks32mc07x_cmp.c  lks32mc07x_crc.c  lks32mc07x_dac.c  lks32mc07x_dma.c  lks32mc07x_dsp.c  lks32mc07x_exti.c  lks32mc07x_gpio.c  lks32mc07x_hall.c  lks32mc07x_i2c.c  lks32mc07x_mcpwm.c  lks32mc07x_nvr.lib  lks32mc07x_opa.c  lks32mc07x_qep.c  lks32mc07x_sif.c  lks32mc07x_spi.c  lks32mc07x_sys.c  lks32mc07x_tim.c  lks32mc07x_tmp.c  lks32mc07x_uart.c  lks32mc07x_wake.c  startup_lks32mc07x.s  system_lks32mc07x.c
include/: Serial.hpp
src/: main.cpp
